fix: add missing endpoint to openapi.yml
